--- a/bin/documentation/_header.html
+++ b/bin/documentation/_header.html
@@ -1,4 +1,4 @@
 <table class="initial" border="0" width="100%"><tr><td class="initial">
-<div class="header-title">Ground Control Station</div>
+<div class="header-title">Ground Control Station (GCS)</div>
 <div class="header-description">Documentation - Version 20200921</div>
 </td></tr></table>
