--- a/bin/documentation/index.html
+++ b/bin/documentation/index.html
@@ -2,7 +2,7 @@
 <title>Ground Control Station</title><script src="core/jsMath/plugins/spriteImageFonts.js"></script><script src="core/jsMath/easy/load.js"></script><link rel="stylesheet" href="core/design.css"><link href="core/favicon.ico" rel="shortcut icon"></link></head><body><header><div w3-include-html="_header.html"></div></header><button onclick="PageToTop()" id="buttonToTop"></button><div id="wrapper"><div id="wrapper-sidebar"><div w3-include-html="_navigation.html"></div></div><div id="wrapper-content">
 
 <div class="note-orange">
-<h3 class="note-orange">Hinweis</h3>
+<h3 class="note-orange">Note</h3>
 If the header and the left navigation bar are not displayed correctly in Firefox, relative paths to files must be allowed in the settings.
 To do this, enter "<b>about:config</b>" in the address line and then search for the configuration entry "<b>security.fileuri.strict_origin_policy</b>".
 This value must be set to "<b>false</b>" (the value can be changed with a double click).
