--- a/bin/documentation/html/configuration.html
+++ b/bin/documentation/html/configuration.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 <div class="header_title">Ground Control Station (GCS)</div>
-<div class="header_version">Version 20201013</div>
+<div class="header_version">Version 20201112</div>
 </header>
 <button onclick="PageToTop()" id="buttonToTop"></button>
 <div class="wrapper">
@@ -34,6 +34,7 @@
 <li class="linav"><a href="configurationorigin.html">Origin</a></li>
 <li class="linav"><a href="configurationnetwork.html">Network</a></li>
 <li class="linav"><a href="configurationstyle.html">Style</a></li>
+<li class="linav"><a href="configurationtts.html">Text-To-Speech</a></li>
 <li class="linone"></li>
 <li class="litext">MISC</li>
 <li class="linav"><a href="vehiclemesh.html">Custom Vehicle Mesh</a></li>
@@ -70,6 +71,7 @@
         <tr><td><a href="configurationorigin.html" style="font-family: Courier-New;">origin.cfg</a></td><td>Specifies the geographic origin for the conversion from geographic to Euclidean coordinates.</td></tr>
         <tr><td><a href="configurationnetwork.html" style="font-family: Courier-New;">network.cfg</a></td><td>Configuration of communication interfaces to the GCS.</td></tr>
         <tr><td><a href="configurationstyle.html" style="font-family: Courier-New;">style.cfg</a></td><td>Allows to set default values for graphical representations in the GCS.</td></tr>
+        <tr><td><a href="configurationtts.html" style="font-family: Courier-New;">tts.cfg</a></td><td>Allows to enable text-to-speech for incomming IMP Log Messages.</td></tr>
     </table>
 
 </div>
