--- a/bin/documentation/html/view.html
+++ b/bin/documentation/html/view.html
@@ -11,7 +11,7 @@
 <body>
 <header>
 <div class="header_title">Ground Control Station (GCS)</div>
-<div class="header_version">Version 20201013</div>
+<div class="header_version">Version 20201112</div>
 </header>
 <button onclick="PageToTop()" id="buttonToTop"></button>
 <div class="wrapper">
@@ -34,6 +34,7 @@
 <li class="linav"><a href="configurationorigin.html">Origin</a></li>
 <li class="linav"><a href="configurationnetwork.html">Network</a></li>
 <li class="linav"><a href="configurationstyle.html">Style</a></li>
+<li class="linav"><a href="configurationtts.html">Text-To-Speech</a></li>
 <li class="linone"></li>
 <li class="litext">MISC</li>
 <li class="linav"><a href="vehiclemesh.html">Custom Vehicle Mesh</a></li>
