--- a/bin/documentation/html/log.html
+++ b/bin/documentation/html/log.html
@@ -10,7 +10,7 @@
 <body>
 <header>
 <div class="header_title">Ground Control Station (GCS)</div>
-<div class="header_version">Version 20220819</div>
+<div class="header_version">Version 20220902</div>
 </header>
 <button onclick="PageToTop()" id="buttonToTop"></button>
 <div class="wrapper">
@@ -47,7 +47,7 @@
     messages. Log messages can be sent to the GCS as IMP messages. The vehicle must be in the database of the GCS. As soon
     as the GCS receives a new log message, the log button text of the toolbar is colored red. If the
     <a href="configurationtts.html">text-to-speech</a> output is enabled and configured and the text of the log is valid, then
-    there is a voice output.
+    there is a voice output. Pressing the "Clear" button removes all log messages.
     <br><br>
     A log message consists of three columns:
     <h3>UTC</h3>
